--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section id="page-cover"></section>
   <div class="bg"></div>
   <script src="//at.alicdn.com/t/font_498617_nwkj86gmmftotj4i.js"></script>
-  <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
